image route fix 1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="skinny_spacers">
                 <div class="circular-section">
-                    <img src="/src/me.jpg" alt="Your Image">
+                    <img src="./src/me.jpg" alt="Your Image">
                 </div>
             </div>
 
