More left menu changes and comments

--- a/index.html
+++ b/index.html
@@ -39,37 +39,34 @@
 
         <ul class="cards">
             <input type="radio" name="menu" id="archive" checked>
-            <li>
-                <label for="archive" class="title"><i class="fa fa-folder"></i>Archive</label>
-                <p>Bla bla bla</p>
-                <!-- <a href="#">New File</a>
-                    <a href="#">Open File</a>
-                    <a href="#">Save As...</a>
-                    <a href="#">Exit</a> -->
+            <li class="first_menu">
+                <label for="archive" class="title"><i class="fa fa-folder"></i>About</label>
+                <p class="card_description">Bla bla bla</p>
+
             </li>
             <input type="radio" name="menu" id="edit">
             <li>
-                <label for="edit" class="title"><i class="fa fa-edit"></i>Edit</label>
-                <a href="#">Copy</a>
-                <a href="#">Cut</a>
-                <a href="#">Paste</a>
-                <a href="#">Undo</a>
+                <label for="edit" class="title"><i class="fa fa-edit"></i>Fields of interest</label>
+                <p class="card_description">Bla bla bla</p>
+                <!-- <a href="#">Undo</a> -->
             </li>
             <input type="radio" name="menu" id="tools">
             <li>
-                <label for="tools" class="title"><i class="fa fa-gavel"></i>Tools</label>
-                <a href="#">Build</a>
-                <a href="#">Macros</a>
-                <a href="#">Command</a>
-                <a href="#">Snippets</a>
+                <label for="tools" class="title"><i class="fa fa-gavel"></i>Portfolio</label>
+                <p class="card_description">Bla bla bla</p>
+                <!-- <a href="#">Snippets</a> -->
             </li>
             <input type="radio" name="menu" id="preferences">
             <li>
-                <label for="preferences" class="title"><i class="fa fa-gears"></i>Preferences</label>
-                <a href="#">Browser</a>
-                <a href="#">Settings</a>
-                <a href="#">Packages</a>
-                <a href="#">Theme</a>
+                <label for="preferences" class="title"><i class="fa fa-gears"></i>Approach</label>
+                <p class="card_description">Bla bla bla</p>
+                <!-- <a href="#">Theme</a> -->
+            </li>
+            <input type="radio" name="menu" id="contact">
+            <li>
+                <label for="preferences" class="title"><i class="fa fa-contact"></i>Contact Me</label>
+                <p class="card_description">Bla bla bla</p>
+                <!-- <a href="#">Theme</a> -->
             </li>
         </ul>
     </nav>
