Menu left functionality finished

--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
         <ul class="cards">
             <input type="radio" name="menu" id="archive" checked>
             <li class="first_menu">
-                <label for="archive" class="title"><i class="fa fa-folder"></i>About</label>
+                <label for="archive" class="title">About</label>
                 <p class="card_description">Bla bla bla</p>
 
             </li>
             <input type="radio" name="menu" id="edit">
             <li>
-                <label for="edit" class="title"><i class="fa fa-edit"></i>Fields of interest</label>
+                <label for="edit" class="title">Fields of interest</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Undo</a> -->
             </li>
             <input type="radio" name="menu" id="tools">
             <li>
-                <label for="tools" class="title"><i class="fa fa-gavel"></i>Portfolio</label>
+                <label for="tools" class="title"></i>Portfolio</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Snippets</a> -->
             </li>
             <input type="radio" name="menu" id="preferences">
             <li>
-                <label for="preferences" class="title"><i class="fa fa-gears"></i>Approach</label>
+                <label for="preferences" class="title"></i>Approach</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Theme</a> -->
             </li>
             <input type="radio" name="menu" id="contact">
             <li>
-                <label for="preferences" class="title"><i class="fa fa-contact"></i>Contact Me</label>
+                <label for="contact" class="title"></i>Contact Me</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Theme</a> -->
             </li>
