Left menuworking as it should

--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
     <nav class="menu">
 
         <ul class="cards">
-            <input type="radio" name="menu" id="archive" checked>
+            <input type="radio" name="menu" id="about" checked>
             <li class="first_menu">
-                <label for="archive" class="title">About</label>
+                <label for="about" class="title" id="colorOverride1">About</label>
                 <p class="card_description">Bla bla bla</p>
 
             </li>
-            <input type="radio" name="menu" id="edit">
-            <li>
-                <label for="edit" class="title">Fields of interest</label>
+            <input type="radio" name="menu" id="interests">
+            <li class="section2">
+                <label for="interests" class="title" id="colorOverride2">Fields of interest</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Undo</a> -->
             </li>
-            <input type="radio" name="menu" id="tools">
-            <li>
-                <label for="tools" class="title"></i>Portfolio</label>
+            <input type="radio" name="menu" id="portfolio">
+            <li class="section3">
+                <label for="portfolio" class="title" id="colorOverride3"></i>Portfolio</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Snippets</a> -->
             </li>
-            <input type="radio" name="menu" id="preferences">
-            <li>
-                <label for="preferences" class="title"></i>Approach</label>
+            <input type="radio" name="menu" id="approach">
+            <li class="section4">
+                <label for="approach" class="title" id="colorOverride1"></i>Approach</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Theme</a> -->
             </li>
             <input type="radio" name="menu" id="contact">
-            <li>
+            <li class="section5">
                 <label for="contact" class="title"></i>Contact Me</label>
                 <p class="card_description">Bla bla bla</p>
                 <!-- <a href="#">Theme</a> -->
