Finished setting up left menu design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <title>Santiago Granobles</title>
 </head>
 
@@ -40,32 +45,45 @@
         <ul class="cards">
             <input type="radio" name="menu" id="about" checked>
             <li class="first_menu">
-                <label for="about" class="title" id="colorOverride1">About</label>
-                <p class="card_description">Bla bla bla</p>
+                <label for="about" class="title" id="colorOverride1">
+                    <h3>About</h3>
+                </label>
+                <h4 class="card_description">Get to know me</h4>
+
 
             </li>
             <input type="radio" name="menu" id="interests">
             <li class="section2">
-                <label for="interests" class="title" id="colorOverride2">Fields of interest</label>
-                <p class="card_description">Bla bla bla</p>
+                <label for="interests" class="title" id="colorOverride2">
+                    <h3>Fields of interest</h3>
+                </label>
+                <h4 class="card_description">What I like</h4>
                 <!-- <a href="#">Undo</a> -->
             </li>
             <input type="radio" name="menu" id="portfolio">
             <li class="section3">
-                <label for="portfolio" class="title" id="colorOverride3"></i>Portfolio</label>
-                <p class="card_description">Bla bla bla</p>
+                <label for="portfolio" class="title" id="colorOverride3"></i>
+                    <h3>Portfolio</h3>
+                </label>
+                <h4 class="card_description">Projects I’m proud of</h4>
+
                 <!-- <a href="#">Snippets</a> -->
             </li>
             <input type="radio" name="menu" id="approach">
             <li class="section4">
-                <label for="approach" class="title" id="colorOverride1"></i>Approach</label>
-                <p class="card_description">Bla bla bla</p>
+                <label for="approach" class="title" id="colorOverride1"></i>
+                    <h3>Approach</h3>
+                </label>
+                <h4 class="card_description">How I design</h4>
+
                 <!-- <a href="#">Theme</a> -->
             </li>
             <input type="radio" name="menu" id="contact">
             <li class="section5">
-                <label for="contact" class="title"></i>Contact Me</label>
-                <p class="card_description">Bla bla bla</p>
+                <label for="contact" class="title"></i>
+                    <h3>Contact Me</h3>
+                </label>
+                <h4 class="card_description">Let’s work together!</h4>
                 <!-- <a href="#">Theme</a> -->
             </li>
         </ul>
@@ -89,6 +107,7 @@
                 </section>
             </div>
             <div class="skinny_spacers">
+                <!-- Picture of me -->
                 <div class="circular-section">
                     <img src="./src/me.jpg" alt="Your Image">
                 </div>
@@ -96,12 +115,41 @@
 
         </section>
         <section id="interests_section">
-            <div class="skinny_spacers override-color"></div>
+            <div class="skinny_spacers override-color">
+                <section class="group_text">
+                    <h1 class="Title">Ux</h1>
+                    <p>
+                        I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me combine my
+                        creativity with a deep dive into how people really think and interact with technology. Think
+                        about it: every click, tap, and scroll tells a story – a story of what works, what confuses, and
+                        what leaves users wanting more.</p>
+                </section>
+            </div>
 
 
             <div class="flat_scpacers_column">
-                <div class="flat_spacer1"></div>
-                <div class="flat_spacer2"></div>
+                <div class="flat_spacer1">
+                    <section class="group_text">
+                        <h1 class="Title">Fun Coding</h1>
+                        <p>
+                            I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me
+                            combine my
+                            creativity with a deep dive into how people really think and interact with technology. Think
+                            about it: every click, tap, and scroll tells a story – a story of what works, what confuses,
+                            and
+                            what leaves users wanting more.</p>
+                    </section>
+                </div>
+                <div class="flat_spacer2">
+                    <section class="group_text">
+                        <h1 class="Title">Green Digital Skills</h1>
+                        <p>
+                            I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me combine my
+                            creativity with a deep dive into how people really think and interact with technology. Think
+                            about it: every click, tap, and scroll tells a story – a story of what works, what confuses, and
+                            what leaves users wanting more.</p>
+                    </section>
+                </div>
             </div>
 
         </section>
