Finished functionalities left menu with JS

--- a/index.html
+++ b/index.html
@@ -45,17 +45,19 @@
         <ul class="cards">
             <input type="radio" name="menu" id="about" checked>
             <li class="first_menu">
-                <label for="about" class="title" id="colorOverride1">
-                    <h3>About</h3>
-                </label>
-                <h4 class="card_description">Get to know me</h4>
+                
+                    <label for="about" class="title" id="colorOverride1">
+                        <h3 id="about_link">About</h3>
+                    </label>
+                    <h4 class="card_description">Get to know me</h4>
+
 
 
             </li>
             <input type="radio" name="menu" id="interests">
             <li class="section2">
                 <label for="interests" class="title" id="colorOverride2">
-                    <h3>Fields of interest</h3>
+                    <h3 id="interests_link">Fields of interest</h3>
                 </label>
                 <h4 class="card_description">What I like</h4>
                 <!-- <a href="#">Undo</a> -->
@@ -63,7 +65,7 @@
             <input type="radio" name="menu" id="portfolio">
             <li class="section3">
                 <label for="portfolio" class="title" id="colorOverride3"></i>
-                    <h3>Portfolio</h3>
+                    <h3 id="portfolio_link">Portfolio</h3>
                 </label>
                 <h4 class="card_description">Projects I’m proud of</h4>
 
@@ -72,7 +74,7 @@
             <input type="radio" name="menu" id="approach">
             <li class="section4">
                 <label for="approach" class="title" id="colorOverride1"></i>
-                    <h3>Approach</h3>
+                    <h3 id="approach_link">Approach</h3>
                 </label>
                 <h4 class="card_description">How I design</h4>
 
@@ -81,7 +83,7 @@
             <input type="radio" name="menu" id="contact">
             <li class="section5">
                 <label for="contact" class="title"></i>
-                    <h3>Contact Me</h3>
+                    <h3 id="contact_link">Contact Me</h3>
                 </label>
                 <h4 class="card_description">Let’s work together!</h4>
                 <!-- <a href="#">Theme</a> -->
@@ -144,9 +146,11 @@
                     <section class="group_text">
                         <h1 class="Title">Green Digital Skills</h1>
                         <p>
-                            I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me combine my
+                            I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me
+                            combine my
                             creativity with a deep dive into how people really think and interact with technology. Think
-                            about it: every click, tap, and scroll tells a story – a story of what works, what confuses, and
+                            about it: every click, tap, and scroll tells a story – a story of what works, what confuses,
+                            and
                             what leaves users wanting more.</p>
                     </section>
                 </div>
@@ -167,10 +171,10 @@
         <section id="portfolioBottom">
             <div class="flat_large_spacer" id="self"></div>
         </section>
-        <section id="approach">
+        <section id="approach_section">
             <div class="xl_spacer"></div>
         </section>
-        <section id="contact">
+        <section id="contact_section">
             <div class="xl_spacer override-color1"></div>
         </section>
         <footer class="footer_github">
