General href's done

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <ul class="cards">
             <input type="radio" name="menu" id="about" checked>
             <li class="first_menu">
-                
-                    <label for="about" class="title" id="colorOverride1">
-                        <h3 id="about_link">About</h3>
-                    </label>
-                    <h4 class="card_description">Get to know me</h4>
+
+                <label for="about" class="title" id="colorOverride1">
+                    <h3 id="about_link">About</h3>
+                </label>
+                <h4 class="card_description">Get to know me</h4>
 
 
 
@@ -98,6 +98,7 @@
             <div class="large_spacers">
                 <section class="group_text">
                     <h1 class="Title">Who am I?</h1>
+                    <pre></pre>
                     <p>Hello! I'm Santiago Granobles Certuche.
 
                         I'm a passionate and creative UX/UI designer with a [number] years of experience
@@ -120,6 +121,8 @@
             <div class="skinny_spacers override-color">
                 <section class="group_text">
                     <h1 class="Title">Ux</h1>
+                    <pre></pre>
+
                     <p>
                         I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me combine my
                         creativity with a deep dive into how people really think and interact with technology. Think
@@ -133,6 +136,7 @@
                 <div class="flat_spacer1">
                     <section class="group_text">
                         <h1 class="Title">Fun Coding</h1>
+                        <pre></pre>
                         <p>
                             I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me
                             combine my
@@ -145,6 +149,7 @@
                 <div class="flat_spacer2">
                     <section class="group_text">
                         <h1 class="Title">Green Digital Skills</h1>
+                        <pre></pre>
                         <p>
                             I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me
                             combine my
@@ -160,22 +165,49 @@
         <section id="portfolio_section">
 
             <div class="flat_scpacers_column">
-                <div class="flat_spacer1"></div>
-                <div class="flat_spacer2"></div>
+                <a href="https://www.behance.net/gallery/138547019/Ux-Case-Study-Employement" target="_blank"
+                    rel="noopener noreferrer">
+                    <div class="flat_spacer1 portfolio_image1" id="project1">
+                        <h1>Ux Case Study</h1>
+                    </div>
+                </a>
+                <a href="https://www.behance.net/gallery/158573537/Proyecto-Florecimiento-(Research)" target="_blank"
+                    rel="noopener noreferrer">
+                    <div class="flat_spacer2 portfolio_image2" id="project2">
+                        <h1>Proyecto Florecimiento</h1>
+                    </div>
+                </a>
             </div>
-            <div class="skinny_spacers override-color"></div>
+            <a href="https://www.behance.net/gallery/152685969/GASTRONOMIA-UXUI" target="_blank"
+                rel="noopener noreferrer">
+                <div class="skinny_spacers override-color portfolio_image3" id="project3">
+                    <h1>Cali Vive</h1>
+                </div>
+            </a>
 
 
 
         </section>
         <section id="portfolioBottom">
-            <div class="flat_large_spacer" id="self"></div>
+            <a href="https://www.behance.net/gallery/145227159/Mobi-Travel-assistant-Research-and-design"
+                target="_blank" rel="noopener noreferrer">
+                <div class="flat_large_spacer portfolio_image4" id="project4">
+                    <h1>Mobi</h1>
+                </div>
+            </a>
         </section>
         <section id="approach_section">
-            <div class="xl_spacer"></div>
+            <div class="xl_spacer">
+                <h1>Approach</h1>
+                <p>Lorem Ipsum</p>
+            </div>
         </section>
         <section id="contact_section">
-            <div class="xl_spacer override-color1"></div>
+            <div class="xl_spacer override-color1">
+                <a href="mailto:santiago.granobles@hotmail.com">
+                    <h1>santiago.granobles@hotmail.com</h1>
+                </a>
+            </div>
         </section>
         <footer class="footer_github">
             <p><a href="https://github.com/ProMistakesMkr" target="_blank" rel="noopener noreferrer">GitHub
