Some basic animations with JS, in progress

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- TEST AREA NAVIGATION END-->
     <main id="content">
         <section id="about_section">
-            <div class="large_spacers">
+            <div class="large_spacers largespaceranimation">
                 <section class="group_text">
                     <h1 class="Title">Who am I?</h1>
                     <pre></pre>
@@ -112,8 +112,10 @@
             <div class="skinny_spacers">
                 <!-- Picture of me -->
                 <div class="circular-section">
-                    <img src="./src/me.jpg" alt="Your Image">
+                    <img src="./src/me.png" alt="Your Image">
+                    
                 </div>
+                <p class="minidescription">Hover over me!</p>
             </div>
 
         </section>
