Trying some animations with Js

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- TEST AREA NAVIGATION END-->
     <main id="content">
-        <section id="about_section">
+        <section id="about_section" class="about_section_override">
             <div class="large_spacers largespaceranimation">
                 <section class="group_text">
                     <h1 class="Title">Who am I?</h1>
