--- a/index.html
+++ b/index.html
@@ -101,19 +101,20 @@
                     <pre></pre>
                     <p>Hello! I'm Santiago Granobles Certuche.
 
-                        I'm a passionate and creative UX/UI designer with a [number] years of experience
+                        I'm a passionate and creative UX/UI designer with experience
                         in crafting user-centered interfaces. I'm driven by the desire to create beautiful
                         and intuitive designs that solve problems and make a positive impact.
-                        When I'm not designing, you might find me [mention a hobby or interest].
-                        I also have a strong interest in [mention another interest related to your
-                        field or something else you're passionate about]</p>
+                        When I'm not designing, you might find me photographing, painting miniatures, going to the gym
+                        or exploring nature.
+                        I also have a strong interest in how AI will impact the industry, certainly a revolution to
+                        implement sooner than later!</p>
                 </section>
             </div>
             <div class="skinny_spacers">
                 <!-- Picture of me -->
                 <div class="circular-section">
                     <img src="./src/me.png" alt="Your Image">
-                    
+
                 </div>
                 <p class="minidescription">Hover over me!</p>
             </div>
@@ -140,12 +141,9 @@
                         <h1 class="Title">Fun Coding</h1>
                         <pre></pre>
                         <p>
-                            I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me
-                            combine my
-                            creativity with a deep dive into how people really think and interact with technology. Think
-                            about it: every click, tap, and scroll tells a story – a story of what works, what confuses,
-                            and
-                            what leaves users wanting more.</p>
+                            Although I wouldn't call myself a developer I do have an interest in what I call Fun coding;
+                            Creative projects motivate me to find interesting ways to appeal visually to the target
+                            audience of the brief</p>
                     </section>
                 </div>
                 <div class="flat_spacer2">
@@ -153,12 +151,10 @@
                         <h1 class="Title">Green Digital Skills</h1>
                         <pre></pre>
                         <p>
-                            I love UX/UI design because it's the ultimate puzzle waiting to be solved! It lets me
-                            combine my
-                            creativity with a deep dive into how people really think and interact with technology. Think
-                            about it: every click, tap, and scroll tells a story – a story of what works, what confuses,
-                            and
-                            what leaves users wanting more.</p>
+                            Did you know we(designers) also have an impact on carbon emissions? Well I didin't know
+                            until
+                            recently(2024), which is why now I try to inform myself and have the best practices to
+                            reduce my carbon footprint in the workplace.</p>
                     </section>
                 </div>
             </div>
@@ -201,7 +197,14 @@
         <section id="approach_section">
             <div class="xl_spacer">
                 <h1>Approach</h1>
-                <p>Lorem Ipsum</p>
+                <pre></pre>
+                <p class="approachtext"> My UX/UI design approach takes users from frustrated to fantastic! It's all
+                    about empathy first: user research (interviews, testing) helps me understand their pain points.
+                    Then, I use competitive analysis to see what works and brainstorm "aha!" solutions. Information
+                    architecture creates a clear user journey, while wireframing and prototyping bring ideas to life for
+                    testing and refinement. Finally, visual design adds the polish for a "wow!" experience. This
+                    data-driven approach ensures user-centered solutions that are both beautiful and functional.
+                </p>
             </div>
         </section>
         <section id="contact_section">
